color contrast fixed for alert

--- a/sass/components/_alerts.scss
+++ b/sass/components/_alerts.scss
@@ -25,6 +25,7 @@
 
 .alert-danger {
     background-color: v.$danger-color;
+    color: #fff;
 }
 .alert-warning {
     background-color: v.$warning-color;
